--- a/config/app.yml
+++ b/config/app.yml
@@ -42,6 +42,7 @@ shared:
   component_paths: [app/views]
 
   reload_on_change: ~
+  live_updates: false
   listen_paths: []
   listen_extensions: [rb, html.*]
 
@@ -62,6 +63,8 @@ shared:
 
 development:
   debug_menu: true
+  live_updates: true
 
 test:
   debug_menu: true
+  live_updates: false
