--- a/docs/src/_data/config_options.yml
+++ b/docs/src/_data/config_options.yml
@@ -198,6 +198,15 @@ system:
       By default Lookbook uses the value of the `reload_classes_only_on_change` Rails config option to decide if
       it should attempt to update the preview data after changes. If set the value of this config option will take precedence and be used instead.
 
+  - name: live_updates
+    types: Boolean
+    default: "true"
+    example: config.lookbook.live_updates = false
+    description: |
+      Apps that include the `listen` and `actioncable` gems will automatically have live UI updates enabled (in development).
+      Setting `live_updates` to `false` will prevent this behaviour and ensure no websocket connections are created.
+      This is automatically handled in production.
+
   - name: listen_paths
     types: Array
     default: "[]"
