--- a/docs/src/_data/guide_nav.yml
+++ b/docs/src/_data/guide_nav.yml
@@ -42,7 +42,7 @@ groups:
     items:
       - ui-theming
       - ui-inspector
-      # - ui-config
+      - ui-favicon
 
   - label: Other
     items:
