--- a/docs/src/_data/guide_nav.yml
+++ b/docs/src/_data/guide_nav.yml
@@ -40,9 +40,9 @@ groups:
 
   - label: UI Customisation
     items:
+      - ui-branding
       - ui-theming
       - ui-inspector
-      - ui-favicon
 
   - label: Other
     items:
