docs(previews): add docs for @after_render tag

--- a/docs/src/_data/guide_nav.yml
+++ b/docs/src/_data/guide_nav.yml
@@ -25,6 +25,7 @@ groups:
       - previews-groups
       - previews-params
       - previews-display
+      - previews-output
 
   - label: Pages
     items:
