docs: v2 docs site homepage

--- a/docs/bridgetown.config.yml
+++ b/docs/bridgetown.config.yml
@@ -21,6 +21,7 @@ collections:
     section: true
     permalink: /extend/:path.*
     title: Extending Lookbook
+    label: Extending
 
   api:
     output: true
