feat(nav): add options for customising the page and preview sections navigation labels

--- a/config/app.yml
+++ b/config/app.yml
@@ -2,6 +2,7 @@ shared:
   project_name: ~
   project_logo: ~
 
+  preview_collection_label: "Previews"
   preview_paths: [test/components/previews]
   preview_display_options: {}
   preview_controller: "Lookbook::PreviewController"
@@ -21,6 +22,7 @@ shared:
   preview_type_default: view_component
   preview_sort_scenarios: false
 
+  page_collection_label: "Pages"
   page_controller: "Lookbook::PageController"
   page_route: pages
   page_paths: [test/components/docs]
