--- a/config/app.yml
+++ b/config/app.yml
@@ -48,6 +48,7 @@ shared:
   live_updates: false
   listen_paths: []
   listen_extensions: [rb, html.*]
+  autoload_previews: true
 
   ui_theme: indigo
   ui_theme_overrides: {}
